--- a/milesone_1/css/style.css
+++ b/milesone_1/css/style.css
@@ -4,18 +4,45 @@
     box-sizing: border-box;
 }
 .contain {
-   
     width: 100%;
 }
 .titolo {
     color: rgba(41, 177, 221, 1);
     padding: 0.5rem;
 }
+.titolo h1 {
+    font-family: 'Acme', sans-serif;
+}
 .type{
  background-color: rgba(41, 177, 221, 1);
- height: 50px;
+padding: 1rem;
+ display: flex;
+ justify-content: center;
+}
+.type p {
+    color: white;
+    margin-right: 10px;
+    font-family: 'Tajawal', sans-serif;
 }
 .site_main {
     background-color: rgba(221, 221, 221, 1);
-  
+}
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+.card {
+    width: 221px;
+    margin: 1rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7px;
+    padding: 1rem;
+    margin-bottom: 4rem;
+}
+.card i {
+    font-size: 30px;
 }
