--- a/milesone_1/css/style.css
+++ b/milesone_1/css/style.css
@@ -42,6 +42,9 @@ padding: 1rem;
     border-radius: 7px;
     padding: 1rem;
     margin-bottom: 4rem;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+       
 }
 .card i {
     font-size: 30px;
